# churn-prediction-tbauctions

./: .gitignore  .pdm-python  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test.ipynb
notebook/: eda.ipynb  optimize_model.ipynb  training.ipynb
src/churn_prediction_tbauctions/: model_training.py  preprocess.py
src/churn_prediction_tbauctions/api/: inference.py  main.py  requirements.txt
